--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@types/react-vertical-timeline-component": "^3.3.6",
     "gh-pages": "^6.2.0"
   }
